--- a/FASTN/ds/index.html
+++ b/FASTN/ds/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8"><base href="/portfolio9/">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
 <title></title>
-<link rel="shortcut icon" href="/-/<user_name>.github.io/<repo_name>/images/favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="/-/ayushvarma9.github.io/portfolio9/images/favicon.ico" type="image/x-icon">
 <script type="ftd" id="ftd-data">
 {
 "ftd#breakpoint-width": {
